--- a/www/ProjetGR8/Atilla/Atilla.html
+++ b/www/ProjetGR8/Atilla/Atilla.html
@@ -6,7 +6,8 @@
 <h2>Projet Dev Web - Ecole IA Microsoft</h2>
 <h3>Developpeur IA - Promo 2020/2021</h3>
 
-<a href=atilla/atilla.html>Lien vers la partie d'Atilla</a>
+<p>Voici la page d'Atilla</p>
+
 
 
 </body>
