Added a second HTML page

--- a/www/ProjetGR8/index.html
+++ b/www/ProjetGR8/index.html
@@ -6,7 +6,7 @@
 <h2>Projet Dev Web - Ecole IA Microsoft</h2>
 <h3>Developpeur IA - Promo 2020/2021</h3>
 
-<a href=atilla/atilla.html>Lien vers la partie d'Atilla</a>
+<a href=atilla.html>Lien vers la partie d'Atilla</a>
 
 
 </body>
