--- a/www/Karima.html
+++ b/www/Karima.html
@@ -6,8 +6,8 @@
 <h2>Projet Dev Web - Ecole IA Microsoft</h2>
 <h3>Developpeur IA - Promo 2020/2021</h3>
 
-<a href=atilla/atilla.html>Lien vers la partie d'Atilla</a>
-<a href=Karima/karima.html>Lien vers la partie de Karima</a>
+<p>Voici la page de Karima</p>
+
 
 
 </body>
