Master clean update

--- a/www/Atilla/Atilla.html
+++ b/www/Atilla/Atilla.html
@@ -6,6 +6,9 @@
 <h2>Projet Dev Web - Ecole IA Microsoft</h2>
 <h3>Developpeur IA - Promo 2020/2021</h3>
 
+<p>Voici la page d'Atilla</p>
+
+
 
 </body>
 </html>
