--- a/www/Karima/Karima.html
+++ b/www/Karima/Karima.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf-8"/>
 <body>
+    <center>
+        <Strong><h1>Première école Microsoft IA au sein du CHRU Nancy</h1></Strong>
+    </center>
     <center>
         <img
             src="promo.jpg" 
-            height="300px" 
-            width="400px"
+            height="600px" 
+            width="800px"
         />
     </center>
-
-
+    <a href=Karima/page/page1.html>Bienvenue</a>
+   
 
 </body>
 </html>
