--- a/www/Karima/Karima.html
+++ b/www/Karima/Karima.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf-8"/>
 <body>
-
-<h1 title="Prénoms et noms du groupe">Atilla KAYA & Karima HARET</h1>
-<h2>Projet Dev Web - Ecole IA Microsoft</h2>
-<h3>Developpeur IA - Promo 2020/2021</h3>
-
-<p>Voici la page de Karima</p>
-
-
+    <center>
+        <Strong><h1>Première école Microsoft IA au sein du CHRU Nancy</h1></Strong>
+    </center>
+    <center>
+        <img
+            src="promo.jpg" 
+            height="600px" 
+            width="800px"
+        />
+    </center>
+    <a href=Karima/page/page1.html>Bienvenue</a>
+   
 
 </body>
 </html>
