--- a/www/index.html
+++ b/www/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html>
+		
+    <head>
+        <meta charset="utf-8"/>
+        <link rel='stylesheet' href="style.css"/>
+        <title>Projet Web </title>
+    </head>
+
+ 
 <body>
 
-<h1 title="Prénoms et noms du groupe">Atilla KAYA & Karima HARET</h1>
-<h2>Projet Dev Web - Ecole IA Microsoft</h2>
-<h3>Developpeur IA - Promo 2020/2021</h3>
+    <center><h1>Projet Web</h1></center>
+    <center><h5>Atilla KAYA & Karima HARET</h5></center>
 
-<a href=atilla/atilla.html>Lien vers la partie d'Atilla</a>
-<a href=Karima/karima.html>Lien vers la partie de Karima</a>
+    <center><a href="https://grandest.simplon.co/">Simplon</a></center>
+
+  
+<center>
+<img
+    src="simplon.jpg" 
+    height="300px" 
+    width="400px"
+/>
+</center>
 
 
+<div style="text-align:right">
+    <h3>Developpeur IA Nancy- Promo 2020/2021</h3>
+    <a href=atilla/atilla.html>Lien vers la partie d'Atilla</a><br/>
+    <a href=Karima/karima.html>Lien vers la partie de Karima</a>
+
+</div>
 </body>
-</html>
+
+
+
+</html> 
