copy from branch to master

--- a/www/Karima/Karima.html
+++ b/www/Karima/Karima.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8"/>
+    <head>
+    <title>Equipe Simplon Nancy</title>
+    </head>
 <body>
     <center>
         <Strong><h1>Première école Microsoft IA au sein du CHRU Nancy</h1></Strong>
     </center>
-    <center>
-        <img
-            src="promo.jpg" 
-            height="600px" 
-            width="800px"
-        />
-    </center>
-    <a href=Karima/page/page1.html>Bienvenue</a>
-   
 
+<div id="slider">
+    <center>
+  <figure>
+    <img src="promo.jpg" 
+        height="700px" 
+        width="1100px"
+    alt>
+    <img src="image7.jpg" alt>
+    <img src="image5.jpg" alt>
+    <img src="image4.jpg" alt>
+    <img src="image2.jpg"
+         height="225px"; 
+        width="225px"alt>
+    <img src="image6.jpg" 
+        height="225px"; 
+        width="225px"alt>
+  </figure>
+  </center>
+ 
+<div style="text-align:right">
+    <a style="display: block; width:100%" href=page1.html><strong><font size="+1">Bienvenue</strong></font></a>
+</div>
 </body>
-</html>
+</html>  
